--- a/Main.tex
+++ b/Main.tex
@@ -1,14 +1,26 @@
 \documentclass[a4paper,10pt]{article}
-\input{./usepackages}
+\input{./meta/usepackages}
+\input{./meta/newcommands}
 
-\title{Hatcher Reading Group Notes}
+\title{Reading group notes for\\ ALGEBRAIC TOPOLOGY\\ by Allen Hatcher}
 \date{\today}
 
 
 \begin{document}
+
 \maketitle
 
+The book is available on the Math dept. page of Cornell University, here:\\
+
+\url{https://pi.math.cornell.edu/~hatcher/AT/AT.pdf}
+
+\newpage
 \section*{Definitions}
 \input{./README.md}
+
+\newpage
+\section*{Exercise questions}
+\subsection*{Chapter 0}
+\input{./exercise_questions/chapter_0.tex}
 
 \end{document}
