--- a/exercise_questions/chapter_0.tex
+++ b/exercise_questions/chapter_0.tex
@@ -1,18 +1,18 @@
 
-\noindent{\bf{1.}} Construct an explicit deformation retraction of the torus with one point deleted onto a graph consisting of two circles intersecting in a point, namely, longitude and meridian circles of the torus. 
+\noindent{\bf{1.}} Construct an explicit deformation retraction of the torus with one point deleted onto a graph consisting of two circles intersecting in a point, namely, longitude and meridian circles of the torus.
 \\
 \\
 \noindent{\bf{2.}} Construct an explicit deformation retraction of $\R^n-\{0\}$ onto $S^{n-1}$.
 \\
 \\
-\noindent{\bf{3.}} 
+\noindent{\bf{3.}}
 \begin{itemize}
 \item[(a)] Show that the composition of homotopy equivalences $X\to Y$ and $Y\to Z$ is a homotopy equivalence $X\to Z$. Deduce that homotopy equivalence is an equivalence relation.
 \item[(b)] Show that the relation of homotopy among maps $X\to Y$ is an equivalence relation.
 \item[(c)] Show that a map homotopic to a homotopy equivalence is a homotopy equivalence.
 \end{itemize}
 
-\noindent{\bf{4.}} A {\bf{deformation retraction in the weak sense}} of a space $X$ to a subspace $A$ is a homotopy $f_t\colon X\to X$ such that $f_0=\1$, $f_1(X)\subset A$, and $f_t(A)\subset A$ for all $t$. Show that if $X$ deformation retracts to $A$ in this weak sense, then the inclusion $A\hookrightarrow X$ is a homotopy of equivalence.
+\noindent{\bf{4.}} A {\bf{deformation retraction in the weak sense}} of a space $X$ to a subspace $A$ is a homotopy $f_t\colon X\to X$ such that $f_0=\1$, $f_1(X)\subset A$, and $f_t(A)\subset A$ for all $t$. Show that if $X$ deformation retracts to $A$ in this weak sense, then the inclusion $A\hookrightarrow X$ is a homotopy equivalence.
 \\
 \\
 \noindent{\bf{5.}} Show that if a space $X$ deformation retracts toa  point $x\in X$, then for each neighborhood $U$ of $x$ in $X$ there exists a neighborhood $V\subset U$ of $x$ such that the inclusion map $V\hookrightarrow U$ is nullhomotopic.
